Issue #3143227 by Firass Ziedan: Fix settings icon overlap with the section title

--- a/scss/theme/vlb-enhancements.base.scss
+++ b/scss/theme/vlb-enhancements.base.scss
@@ -164,13 +164,6 @@ body {
   }
 }
 
-.layout-builder__link {
-  &.layout-builder__link--configure {
-    z-index: 20;
-    position: absolute;
-  }
-}
-
 .toolbar-fixed {
   .js-messages__wrapper {
     top: 0;
